--- a/ScrollX/Base.lproj/InformationStoryboard.storyboard
+++ b/ScrollX/Base.lproj/InformationStoryboard.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Start View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="StartViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -37,7 +37,7 @@
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="skipInformation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9LN-Ig-3Gz"/>
+                                    <action selector="skipInformation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vnh-nO-FCG"/>
                                 </connections>
                             </button>
                         </subviews>
